--- a/Client/local.properties
+++ b/Client/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 15 20:18:00 CEST 2024
-sdk.dir=C\:\\Users\\ACER\\AppData\\Local\\Android\\Sdk
+#Fri May 03 17:25:04 CEST 2024
+sdk.dir=C\:\\Users\\navar\\AppData\\Local\\Android\\Sdk
